--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.panel {
+    margin: 0.5em;
+    padding: 0.5em;
+    border: 1px solid gray;
+}
+
+#search_panel {
+    form {
+        display: flex;
+        text-align: center;
+
+        input#query {
+            flex-grow: 2;
+            margin-left: 0.5em;
+            margin-right: 0.5em;
+        }
+    }
+}
