--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 </div>
 <div id='search_panel' class='panel'>
-    <%= form_tag method="get" do %>
+    <%= form_tag '/', :method => 'get' do %>
         <%= label_tag :query, "Search GitHub:" %>
         <%= text_field_tag :query, @query  %>
         <%= submit_tag "Search" %>
