--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -26,7 +26,7 @@
         <%= submit_tag "Search" %>
     <% end %>
 
-    <% if not @results.empty? %>
+    <% if @results %>
         <ul id='results_list'>
             <% @results.items.each do |repo| %>
                 <li>
