--- a/app/views/search/_nav_pages.html.erb
+++ b/app/views/search/_nav_pages.html.erb
@@ -1,19 +1,19 @@
 <nav>
     <% if @num_pages > 1 %>
-        <%= link_to_search_with "First", :page => 1 %>
+        <%= link_to_search_page "First", 1 %>
         <% if @page > 1 %>
-            <%= link_to_search_with "Previous", :page => @page-1 %>
+            <%= link_to_search_page "Previous", @page-1 %>
         <% end %>
-        <% (1...@page).each do |num| %>
-            <%=link_to_search_with num, :page => num %>
+        <% (1..@num_pages).each do |num| %>
+            <% if @page == num %>
+                <span class='current'><%= @page %></span>
+            <% else %>
+                <%=link_to_search_page num, num %>
+            <% end %>
         <% end %>
-        <span class='current'><%= @page %></span>
-        <% (@page+1..@num_pages).each do |num| %>
-            <%= link_to_search_with num, :page => num %>
+       <% if @page < @num_pages %>
+            <%= link_to_search_page "Next", @page+1 %>
         <% end %>
-        <% if @page < @num_pages %>
-            <%= link_to_search_with "Next", :page => @page+1 %>
-        <% end %>
-        <%= link_to_search_with "Last", :page => @num_pages %>
+        <%= link_to_search_page "Last", @num_pages %>
     <% end %>
 </nav>
