--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,6 +16,7 @@
     <% else %>
         <%= link_to "Log In", login_url %>
     <% end %>
+    <%= link_to "Guestbook", guestbook_url %>
 </div>
 <div id='search_panel' class='panel'>
     <%= form_tag '/', :method => 'get' do %>
@@ -62,6 +63,7 @@
                 <%= render partial: "search_result", locals: {repo: repo} %>
             <% end %>
         </ul>
+
         <%= render partial: "nav_pages", locals: {page: @page,
                                                   pages: @num_pages,
                                                   per_page: @per_page} %>
