--- a/app/assets/stylesheets/guestbook.scss
+++ b/app/assets/stylesheets/guestbook.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Guestbook controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+li {
+    width: 100%;
+
+    .name {
+        display: inline-block;
+    }
+    .date {
+        width: 25%;
+        display: inline-block;
+    }
+}
